integration visitors home begin

--- a/cyclorun/content/themes/cyclorun/app/assets/index.html
+++ b/cyclorun/content/themes/cyclorun/app/assets/index.html
@@ -7,7 +7,51 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <h1>Hello Webpack!</h1>
+  <header class="header">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">CYCL'O'RUN</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <button type="logout-button" class="btn btn-dark">Connexion</button>
+    </nav>
+  </header>
+
+  <main class="main">
+    <div class="right"></div>
+    <div class="welcome-message">
+      <p>En France, il y a</p> 
+      <p><span class="runner">12 Millions de runners</span> <span class="cyclists">9 Millions de cyclistes</span></p>
+      <p>Pourquoi <span class="runner">courir</span> <span class="cyclists">pedaler</span> tout seul ?</p>
+      <div class="welcome-submessage">
+        <p>Rejoins <span>Cyclo'O'Run</span></p>
+        <p>Et trouve <span>des sorties programmées</span></p>
+        <p>par quelqu'un qui vit <span>près de chez toi</span></p>
+      </div>
+    </div>
+    <div class="left"></div>
+  </main>
+
+  <div class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>Modal body text goes here.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="js/app.js"></script>
 </body>
 </html>
