Home in progress

--- a/cyclorun/content/themes/cyclorun/app/assets/index.html
+++ b/cyclorun/content/themes/cyclorun/app/assets/index.html
@@ -8,15 +8,11 @@
 </head>
 <body>
   <header class="header">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">CYCL'O'RUN</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <button type="logout-button" class="btn btn-dark">Connexion</button>
+    <nav class="navbar navbar-expand-lg">
+      <a class="navbar-brand" href="#"><img src="images/logo-lightgrey.png" alt=""></a>
+      <button type="button" class="btn btn-dark connexion-button">Connexion</button>
     </nav>
   </header>
-
   <main class="main">
     <div class="right"></div>
     <div class="welcome-message">
@@ -32,25 +28,26 @@
     <div class="left"></div>
   </main>
 
-  <div class="modal" tabindex="-1" role="dialog">
+  <div class="modal fade signin-modal" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Modal title</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          <p>Modal body text goes here.</p>
+          ...
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-primary">Save changes</button>
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
         </div>
       </div>
     </div>
   </div>
+
 
   <script src="js/app.js"></script>
 </body>
