--- a/cyclorun/content/themes/cyclorun/app/assets/index.html
+++ b/cyclorun/content/themes/cyclorun/app/assets/index.html
@@ -15,14 +15,18 @@
   </header>
   <main class="main">
     <div class="right"></div>
-    <div class="welcome-message">
-      <p>En France, il y a</p> 
-      <p><span class="runner">12 Millions de runners</span> <span class="cyclists">9 Millions de cyclistes</span></p>
-      <p>Pourquoi <span class="runner">courir</span> <span class="cyclists">pedaler</span> tout seul ?</p>
-      <div class="welcome-submessage">
-        <p>Rejoins <span>Cyclo'O'Run</span></p>
-        <p>Et trouve <span>des sorties programmées</span></p>
-        <p>par quelqu'un qui vit <span>près de chez toi</span></p>
+    <div class="welcome">
+      <div class="welcome__message">
+        <p>En France, il y a</p> 
+        <p><span class="span runner">12 Millions de runners</span> <span class=" span cyclist">9 Millions de cyclistes</span></p>
+      </div>
+      <div class='welcome__question'>
+      <p>Pourquoi <span class=" span runner">courir</span> <span class="cyclist">pedaler</span> tout seul ?</p>
+      </div>
+      <div class="welcome__submessage">
+        <p>Rejoins <span class=" span submessage">Cycl'O'Run</span></p>
+        <p>Et trouve <span class="span submessage">des sorties programmées</span></p>
+        <p>par quelqu'un qui vit <span class="span submessage">près de chez toi</span></p>
       </div>
     </div>
     <div class="left"></div>
