--- a/cyclorun/content/themes/cyclorun/app/assets/index.html
+++ b/cyclorun/content/themes/cyclorun/app/assets/index.html
@@ -14,14 +14,14 @@
     </nav>
   </header>
   <main class="main">
-    <div class="right"></div>
+    <div class="right"><img src="images/cycl/1.jpg" alt=""></div>
     <div class="welcome">
       <div class="welcome__message">
         <p>En France, il y a</p> 
         <p><span class="span runner">12 Millions de runners</span> <span class=" span cyclist">9 Millions de cyclistes</span></p>
       </div>
       <div class='welcome__question'>
-      <p>Pourquoi <span class=" span runner">courir</span> <span class="cyclist">pedaler</span> tout seul ?</p>
+      <p>Pourquoi <span class=" span runner">courir</span> <span class="span cyclist">pédaler</span> tout seul ?</p>
       </div>
       <div class="welcome__submessage">
         <p>Rejoins <span class=" span submessage">Cycl'O'Run</span></p>
@@ -29,7 +29,7 @@
         <p>par quelqu'un qui vit <span class="span submessage">près de chez toi</span></p>
       </div>
     </div>
-    <div class="left"></div>
+    <div class="left"><img src="images/run/2.jpg" alt=""></div>
   </main>
 
   <div class="modal fade signin-modal" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
