--- a/cyclorun/content/themes/cyclorun/app/assets/accueil.html
+++ b/cyclorun/content/themes/cyclorun/app/assets/accueil.html
@@ -20,7 +20,7 @@
         <p>En France, il y a</p> 
         <p><span class="span runner">12 Millions de runners</span> <span class=" span cyclist">9 Millions de cyclistes</span></p>
       </div>
-      <div class='welcome__question'>
+      <div class="welcome__question">
       <p>Pourquoi <span class=" span runner">courir</span> <span class="cyclist">pedaler</span> tout seul ?</p>
       </div>
       <div class="welcome__submessage">
