--- a/cyclorun/content/themes/cyclorun/app/assets/outing-details.html
+++ b/cyclorun/content/themes/cyclorun/app/assets/outing-details.html
@@ -20,11 +20,11 @@
   <main>
     <div class="main-header">
       <img src="images/avatar.png" alt="">
-      <h2 class="outing__detail__title">Titre de la sortie</h2>
+      <h2 class="outing__detail__title">Détails de la sortie</h2>
     </div>
     <div class="outing__details">
       <section class="outing__details__informations">
-
+        <h3 class="outing__details__title">Titre de la sortie</h3>
       </section>
       <aside class="outing__details__map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d46603.441767461125!2d5.850215753874818!3d43.110501634411385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e1!4m5!1s0x12c91b0fd79f6773%3A0x3524575272a0b303!2sPlace%20de%20la%20Libert%C3%A9%2C%2083000%20Toulon!3m2!1d43.1259535!2d5.9306111999999995!4m5!1s0x12c90160c00be73b%3A0x40819a5fd8fc8b0!2sSix-Fours-les-Plages!3m2!1d43.093061999999996!2d5.839225!5e0!3m2!1sfr!2sfr!4v1590561716077!5m2!1sfr!2sfr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
