--- a/cyclorun/content/themes/cyclorun/app/assets/index.html
+++ b/cyclorun/content/themes/cyclorun/app/assets/index.html
@@ -1,91 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Cycl'O'run</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Webpack</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
     <header class="header">
         <nav class="navbar authentified navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#"><img class="logo" src="images/logo-complet.png" alt=""></a>
-            <a class="navbar__item" href="#">Home</a>
-            <a class="navbar__item" href="#">Profil</a>
-            <a class="navbar__item" href="#">Participer à une sortie</a>
-            <a class="navbar__item" href="#">Organiser une sortie</a>   
-            <button type="logout-button" class="btn">Déconnexion</button>
+        <a class="navbar-brand" href="#"><img class="logo" src="images/logo-complet.png" alt=""></a>
+        <a class="navbar__item__is-active" href="#">Home</a>
+        <a class="navbar__item" href="#">Profil</a>
+        <a class="navbar__item" href="#">Participer à une sortie</a>
+        <a class="navbar__item" href="#">Organiser une sortie</a>   
+        <button type="logout-button" class="btn">Déconnexion</button>
         </nav>
     </header>
-    <main class="outing-reg">
-        <section class="outing-reg__organisation">
-            <h1 class="outing-reg__organisation__page__title">Envie d'organiser une sortie? Vous êtes au bon endroit!</h1>
-            <h2 class="outing-reg__organisation__page__subtitle">Sur cette page vous allez pouvoir:</h2>
-            <a class="outing-reg__organisation__new" href="#">Créer une nouvelle sortie</a>
-            <p>OU</p>
-            <a class="outing-reg__organisation__old" href="#">Renouveller une sortie déjà créée</a>
-        </section>
+    <main>
+        <section>
+         <h1>Les sorties organisées</h1> 
+         <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Filtres
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </div>
 
-         <form class="outing-reg__creation" action="" method="post">
-        <div class="outing-reg__location">
-            <input class="outing-reg__input" type="text" id="outing_name" name="outing-reg_name" placeholder="Nom de la sortie">
-        </div>
-        <div class="outing-reg__rdv">
-            <input class="outing-reg__input" type="date" id="date" name="date">
-            <label for="hour">Choix de l'heure</label>
-            <input class="outing-reg__input" type="time" id="hour" name="time">
-        </div>
-        <div class="outing-reg__length">
-            <input class="outing-reg__input" type="number" id="length" name="distance" placeholder="Distance du parcours (en km)">
-        </div>
-        <div class="outing-reg__location">
-            <label for="location">Lieu de Rendez-vous</label>
-            <input class="outing-reg__input" type="text" id="address" name="address" placeholder="Lieu du rendez-vous (ne pas oublier le code postal">
-        </div>
-        <div class="outing-reg__practice">
-            <label for="running">Vélo</label>
-            <input class="outing-reg__input" type="radio" id="running" name="practicedSport" value="vélo">
-                <!-- Select à afficher uniquement si le bouton est coché - A voir en JS-->
-                <select class="form-control outing-reg__select" name="level">
-                    <option value="" selected>Niveau de la sortie</option>
-                    <option value="Loisirs (-15km)">Loisirs (-15km)</option>
-                    <option value="Régulier (15-30km)">Régulier (15-30km)</option>
-                    <option value="Avancé (30-60km)">Avancé (30-60km)</option>
-                    <option value="Intensif (+60km)">Intensif (+60km)</option>
-                </select>
-            <label for="cycling">Course à pieds</label>
-            <input class="outing__input" type="radio" id="cycling" name="practicedSport" value="course à pieds">
-                <!-- Select à afficher uniquement si le bouton est coché-->
-                <select class="form-control outing-reg__select" name="level">
-                    <option value="" selected>Niveau de la sortie</option>
-                    <option value="Loisirs (-5km)">Loisirs (-5km)</option>
-                    <option value="Régulier (5-10km)">Régulier (5-10km)</option>
-                    <option value="Avancé (10-50km)">Avancé (10-50km)</option>
-                    <option value="Intensif (+15km)">Intensif (+15km)</option>
-                </select>
-        </div>    
-        <div class="outing-reg__image">
-            <label for="outing-image">Insérez ici ul'image du parcours</label>
-            <input class="outing-reg__input" type="file" id="image" name="picture" alt="image du parcours" src="">
-        </div>
-        <!-- Le visuel du point de départ se verra uniquement sur la page détails de la course
-            <div class="outing__map">
-                <label for="outing-map">Insérez ici une map pour la sortie</label>
-            </div>     
-        -->
-        <div class="outing-reg__description">
-            <label for="description">Saisir la description de la sortie</label>
-            <textarea name="description" id="description" cols="30" rows="10"></textarea>
-        </div>
-        <div class="outing-reg__course">
-        </div>
-        <div class="outing-reg__submit">
-            <input class="outing-reg__input" type="submit" value="valider la course">
-        </div>
-    </form> 
-    </main>   
+        </section>
+        <section class="outing">
+            <article class="outing__article">
+                <div class="outing__article__image">
+                    <img class="outing__article__img" src="images/logo-o.png" alt="">
+                </div>
+                    <h3 class="outing__article__title">Nom de l'évènement</h3>
+                    <p class="outing__article__date">date</p>
+                    <p class="outing__article__time">heure</p>
+                    <p class="outing__article__sport">sport pratiqué</p>
+                    <div class="outing__article__pict">
+                        <img src="images/Running.svg" alt="" class="outing__article__pict__svg">
+                        <img src="images/Cycling.svg" alt="" class="outing__article__pict__svg">
+                    </div>
+                    <p class="outing__article__level">Niveau</p>
+                    <p class="outing__article__location">Adresse du rdv</p>
+                    <p class="outing__article__distance">Distance parcourue</p>
+                    <h4>Organisateur de la sortie</h4>
+                    <img class="outing__article__img" src="images/avatar.png" alt="AVATAR DE L'AUTEUR">
+                    <p class="outing__article__author">Pseudo du créateur</p>
+                    <ul>
+                        <li>
+                            <img class="outing__article__img" src="images/avatar.png" alt="AVATAR DU PARTICIPANT">
+                            <p class="outing__article__author">Pseudo du participant</p>
+                        </li>            
+                    </ul>    
+                    <button class="outing__article__button" type="button">Détails de la sortie</button>
+                    <button class="outing__article__button" type="button">Je participe</button>                
+            </article>
+        </section> 
+    </main>
 </body>
 </html>
-
-
