--- a/cyclorun/content/themes/cyclorun/app/assets/connexion.html
+++ b/cyclorun/content/themes/cyclorun/app/assets/connexion.html
@@ -10,6 +10,7 @@
   <header class="header">
     <nav class="navbar navbar-expand-lg">
       <a class="navbar-brand" href="#"><img src="images/logo-lightgrey.png" alt=""></a>
+      <button type="button" class="btn btn-dark connexion-button">Connexion</button>
     </nav>
   </header>
   <main>
