modif apres mapbox

--- a/cyclorun/content/themes/cyclorun/app/assets/outing-creation-page.html
+++ b/cyclorun/content/themes/cyclorun/app/assets/outing-creation-page.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css" />
+    
     <title>Cycl'O'run</title>
 </head>
 <body>
@@ -28,6 +29,8 @@
         </section>
 
          <form class="outing-reg__creation" action="" method="post">
+            
+             <div id="mapp"></div>
         <div class="outing-reg__location">
             <input class="outing-reg__input" type="text" id="outing_name" name="outing-reg_name" placeholder="Nom de la sortie">
         </div>
@@ -87,5 +90,4 @@
     </main>   
 </body>
 </html>
-
 
