profile and outingcreation pages in progress

--- a/cyclorun/content/themes/cyclorun/app/assets/personalized-home.html
+++ b/cyclorun/content/themes/cyclorun/app/assets/personalized-home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="header">
-    
+    <nav>
       <a class="navbar-brand" href="#"><img class="logo" src="images/logo-complet.png" alt=""></a>
       <a class="navbar__item__is-active" href="#">Home</a>
       <a class="navbar__item" href="#">Profil</a>
