--- a/cyclorun/content/themes/cyclorun/app/assets/profile-page.html
+++ b/cyclorun/content/themes/cyclorun/app/assets/profile-page.html
@@ -8,42 +8,58 @@
 </head>
 <body>
   <header class="header">
-    <p> INCLURE LA GREY NAVBAR</p>
+    <nav>
+      <a class="navbar-brand" href="#"><img class="logo" src="images/logo-complet.png" alt=""></a>
+      <a class="navbar__item__is-active" href="#">Home</a>
+      <a class="navbar__item" href="#">Profil</a>
+      <a class="navbar__item" href="#">Participer à une sortie</a>
+      <a class="navbar__item" href="#">Organiser une sortie</a>   
+      <button type="logout-button" class="btn">Déconnexion</button>
+    </nav>
   </header>
   <main class="profile">
-    <h1 class="profile__title">Mon Profil</h1>
     <div class="profile__infos">
+      <div class="profile__infos__personal__avatar">
+          <img class="avatar__img" src="images/avatar.png" alt="Here comes the user avatar"/>
+      </div>
+      <h1 class="profile__title">Mon Profil</h1>
       <div class="profile__infos__personal">
         <h2 class="profile__infos__title">Eddy Murphy</h2>
-        <div class="profile__infos__personal__avatar"></div>
-          <img src="images/avatar.png" alt="Here comes the user avatar"/>
-        </div>
         <div class="profile__infos__content">
-          <p>58 ans</p>
-          <p>80 kg</p>
+          <p class="user__infos">25 ans</p>
+          <p class="user__infos">Paris</p>
         </div>
         <div class="profile__infos__sports">
           <div class="profile__infos__sports__practice">
-                <img class="profile__infos__sports__practice__svg" src="images/Cycling.svg" alt="">
-                <img class="profile__infos__sports__practice__svg" src="images/Running.svg" alt="">
+            <div class="my__practice__level">
+              <input class="profile__infos__sports__practice__svg" type="checkbox" id="profile__cycling" name="practicedSport" value="vélo">
+              <img class="profile__infos__sports__practice__svg" src="images/Cycling.svg" alt="">
+              <p class="selected__practice__level">Avancé</p>
+            </div>
+            <div class="my__practice__level">
+              <input class="outing__input" type="checkbox" id="profile__running" name="practicedSport" value="course à pieds">
+              <img class="profile__infos__sports__practice__svg" src="images/Running.svg" alt="">
+              <p class="selected__practice__level">Avancé</p>
+            </div>
           </div>
         </div>
+      </div>
     </div>
     <div class="profile__outings">
         <div class="profile__outings__created">
-            <h3 class="profile__outings__created__title">Liste de sorties créées</h3>
+            <h3 class="profile__outings__created__title">Liste de mes sorties</h3>
             <div class="profile__outings_created__content">
-                <p>nom sortie</p>
-                <p>nom sortie</p>
-                <p>nom sortie</p>
+                <p class="profile__outings__list">nom sortie</p>
+                <p class="profile__outings__list">nom sortie</p>
+                <p class="profile__outings__list">nom sortie</p>
             </div>
         </div>
         <div class="profile__outings__future">
-            <h3 class="profile__outings__future__title">Mes futures sorties participation</h3>
+            <h3 class="profile__outings__future__title">Les sorties auxquelles je participe</h3>
             <div class="profile__outings_future__content">
-                <p>nom sortie</p>
-                <p>nom sortie</p>
-                <p>nom sortie</p>
+                <p class="profile__outings__list">nom sortie</p>
+                <p class="profile__outings__list">nom sortie</p>
+                <p class="profile__outings__list">nom sortie</p>
             </div>
         </div>
     </div>
