--- a/cyclorun/content/themes/cyclorun/app/assets/participation-outing-page.html
+++ b/cyclorun/content/themes/cyclorun/app/assets/participation-outing-page.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <section>
-         <h1>Les sorties organisées</h1> 
+         <h1 class="outing-participation-page-title">Les sorties organisées</h1> 
          <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Filtres
